swagger add documentation for all api
