# product-api/swagger.yaml
@@ -1,6 +1,3 @@
-basePath: /
-consumes:
-- application/json
 definitions:
   GenericError:
     description: GenericError is a generic error message returned by a server
@@ -32,20 +29,18 @@ definitions:
         x-go-name: SKU
     type: object
     x-go-package: github.com/uswah-uswatunhahaha/building-microservices/product-api/data
-info:
-  description: Documentation for Product API
-  title: of Product API
-  version: 1.0.0
 paths:
-  /products:
+  /product:
     get:
-      description: Return a list of products from the database
-      operationId: listProducts
+      description: Get all products
+      operationId: getAllProducts
       responses:
         "200":
-          $ref: '#/responses/productsResponse'
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
       tags:
-      - products
+      - product
     post:
       description: Create a new product
       operationId: createProduct
@@ -64,7 +59,36 @@ paths:
         "501":
           $ref: '#/responses/errorResponse'
       tags:
-      - products
+      - product
+  /product/{id}:
+    delete:
+      description: Delete a product by id
+      operationId: deleteProduct
+      parameters:
+      - description: The id of product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - product
+    get:
+      description: Get a product by id
+      operationId: getSingleProduct
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - product
     put:
       description: Update a products details
       operationId: updateProduct
@@ -90,40 +114,7 @@ paths:
         "404":
           $ref: '#/responses/errorResponse'
       tags:
-      - products
-  /products/{id}:
-    delete:
-      description: Update a products details
-      operationId: deleteProduct
-      parameters:
-      - description: The id of product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
-      responses:
-        "201":
-          $ref: '#/responses/noContentResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
-        "501":
-          $ref: '#/responses/errorResponse'
-      tags:
-      - products
-    get:
-      description: Return a list of products from the database
-      operationId: listSingle
-      responses:
-        "200":
-          $ref: '#/responses/productResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
-      tags:
-      - products
-produces:
-- application/json
+      - product
 responses:
   errorResponse:
     description: Generic error message returned as a string
@@ -141,6 +132,4 @@ responses:
       items:
         $ref: '#/definitions/Product'
       type: array
-schemes:
-- http
 swagger: "2.0"
